--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "minimatch": "^3.1.2",
     "minimist": "^1.2.6",
     "mkdirp": "^0.3.5",
+    "moment": "^2.29.3",
     "mongodb": "^4.3.1",
     "mongodb-connection-string-url": "^2.5.2",
     "mongoose": "^6.2.11",
@@ -156,6 +157,7 @@
     "registry-auth-token": "^4.2.1",
     "registry-url": "^5.1.0",
     "responselike": "^1.0.2",
+    "router": "^1.3.6",
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
     "saslprep": "^1.0.3",
@@ -174,6 +176,7 @@
     "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "strip-json-comments": "^2.0.1",
+    "stripe": "^8.219.0",
     "supports-color": "^5.5.0",
     "to-readable-stream": "^1.0.0",
     "to-regex-range": "^5.0.1",
@@ -209,6 +212,5 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "description": ""
 }
