--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.1",
     "axios": "^0.26.1",
+    "firebase": "^9.7.0",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-dropzone": "^14.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "react-stripe-checkout": "^2.6.3",
@@ -24,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+    "eject": "react-scripts eject",
+    "analyzer" : "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "devDependencies": {
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0"
+  }
 }
